codepkg/objects/Support_Resource__c.object
<CustomObject>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>As of Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active ?</label>
        <type>Checkbox</type>
    </fields>
    <label>Support Resource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Support Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>